Fix styling to better spacing

--- a/components/staging/staging.less
+++ b/components/staging/staging.less
@@ -156,16 +156,10 @@
 @media (min-width: @screen-lg-min) {
 }
 
-.commit-message-title-counter {
-  right: 20px;
-  position: absolute;
-
-  &.ahead {
-    right: 75px;
-  }
-  &.behind {
-    right: 45px;
-  }
+.commit-message-title {
+  float: right;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
 }
 
 
